# tealeaf

./: LABNOTEBOOK.md  README.md  REPO_NOTES.md  pyproject.toml
.github/: copilot-instructions.md
docs/: glm.tex
external_patches/: alevin-fry-v0.16.0-dump-eq-probs.patch  salmon-v1.10.3-weighted-rad.patch
extra_scripts/: aggregate_glm_scores.py  aggregate_primer_positional_validations.py  aggregate_pseudobulk_sparse.py  alevin_dedup_t2g.py  alevin_make_t2t.py  benchmark_factorized_polish.py  benchmark_single_cell_glm.py  build_alevin_fry_portable.sbatch  build_fixed_ec_design.py  build_primer_ec_designs.py  build_salmon_primer_designs.py  cache_alevin_glm_designs.py  check_eqweight_compatibility.py  compare_fixed_ec_designs.py  demultiplex_parse_primers.py  export_microglia_primer_pairs.py  export_seurat_metadata.R  fetch_ena_fastqs.py  merge_alevin_batches.py  prepare_reference_labels.py  run_microglia_alevin_fry_t2t_quant.sbatch  run_microglia_alevin_fry_weighted_parsimony_quant.sbatch  run_microglia_cluster_dx_mouse_filtered_em_tealeaf.sbatch  run_microglia_cluster_dx_mouse_tealeaf.sbatch  run_microglia_cluster_tealeaf.sbatch  run_microglia_fixed_ec_design.sbatch  run_microglia_glm_cv.sbatch  run_microglia_glm_cv_selected.sbatch  run_microglia_paired_polish_benchmark.sbatch  run_microglia_paired_primer_glm.sbatch  run_microglia_paired_primer_polish.sbatch  run_microglia_primer_designs.sbatch  run_microglia_salmon_alevin_align.sbatch  run_microglia_salmon_dump_eq_weights.sbatch  run_microglia_salmon_weighted_rad.sbatch  run_microglia_score_factorized_fista.sbatch  (+19 more)
(+39 files in other folders)
