[build-system]
requires = ["setuptools>=61.0"] # to support project.scripts
build-backend = "setuptools.build_meta"

[project]
name = "tealeaf"
description='tealeaf implementation'
authors = [{name = "Xingpei Zhang"}, {name="David A Knowles"}]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyranges",
    "pandas",
    "scipy"
]

[project.optional-dependencies]
glm = ["torch>=2.1"]
benchmark = ["scikit-learn>=1.3"]
license= {file = "LICENSE"}

[project.scripts]
tealeaf-map = 'tealeaf.__main__:tealeaf_map_gen'
tealeaf-cluster = 'tealeaf.__main__:tealeaf_clustering'
tealeaf-sc = 'tealeaf.__main__:tealeaf_sc'
tealeaf-ggsashimi = 'tealeaf.__main__:tealeaf_ggsashimi'

[project.urls]
Homepage = "https://github.com/XZ3149/tealeaf"
